--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 A solver for the no tipping game, for Dennis Shasha's Heuristics class of Fall 2011
 Compile with "cmake -D CMAKE_BUILD_TYPE:string=Release ./"
+             "make"
              "javac *.java"
+
+The ./compile script does this as well.
+
 run with "java Contestant <port_number>"
 The java app expects the c++ "no_tipping_game executable to be in the working directory.
 
